Changed to use box sizing border box for width fix on mobile view

--- a/app/src/pages/CPDash/stylesheets/Profile.module.css
+++ b/app/src/pages/CPDash/stylesheets/Profile.module.css
@@ -27,16 +27,19 @@
     justify-content: space-between;
     align-items: center;
     gap: 1rem;
+    box-sizing: border-box;
 }
 
 .inputPairing input{
     min-width: 300px;
     font-size: inherit;
+    box-sizing: border-box;
 }
 
 .inputPairing select{
     min-width: 308px;
     font-size: inherit;
+    box-sizing: border-box;
 }
 
 #groupContainer{
@@ -89,16 +92,15 @@
         flex-direction: column;
         align-items: flex-start;
         gap: 1rem;
+        width: 100%;
     }
 
     .inputPairing input{
-        min-width: 200px;
-        width: 95%;
+        width: 100%;  
     }
 
     .inputPairing select{
-        min-width: 208px;
-        width: calc(95% + 8px);
+        width: 100%;
     }
 
     .btnContainer{
